# tinycoverage

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Session.vim  parser.py  run.sh
common/: magic.h
pass/: CMakeLists.txt  pass.cpp  pass.h  register.cpp  sancov.cpp
runtime/: CMakeLists.txt  tinycoverage.cpp  tinycoverage.h  tinycoverage_printer.cpp
test/: CMakeLists.txt  foo.h  main.cpp  main.cpp.tcno
test/bar/: bar.cpp  bar.cpp.tcno  bar.h
